# 3D-scanning-simulation

./: README.md  download.py  gui_app.py  gui_config.json  main.py  pyproject.toml  requirements-backend.txt  requirements.txt  task_progress.md  view.py
backend/: app.py
backend/templates/: index.html
captures/20260620_230205/: scan_video.avi
captures/20260621_010623/: scan_video.avi
captures/20260621_010656/: scan_video.avi
models/model_480ed1c634164cc2b9098fb5ca14978f/: 3DModel.stl  test.mix
models/model_753f18f087d3418a863548d6bdd4f6dd/: test subject 1.form
models/model_ec2d1684a36d4e3298f15d3c9b3d5e90/: 3DModel.stl
scanner3d/: __init__.py  aruco_tracker.py  camera.py  config.py  droidcam_remote.py  kiri_reconstructor.py  phone_camera.py  scanner.py  segmentation.py
