[project]
name = "3d-scanning-simulation"
version = "1.0.0"
description = "3D Scanner - Flask Backend for Vercel"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
]

[tool.vercel]
entrypoint = "backend.app:app"